package LEBOCQTitouan.edu.model.commands.planet.factory;

public enum PlanetCommandType {
    MUTATE
}
