package LEBOCQTitouan.edu.model.commands.shockwave;

import LEBOCQTitouan.edu.model.entities.Shockwave;
import LEBOCQTitouan.edu.model.entities.planet.Planet;

public abstract class ShockwaveCommand {
    private Shockwave shockwave;
    private Planet planet;
}
