package LEBOCQTitouan.edu.model.commands.shockwave.factory;

import LEBOCQTitouan.edu.model.entities.planet.Planet;

public class ShockwaveCommandFactory {
    private Planet planet;
}
